# tfs

./: .buildinfo  .codacy.yml  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS.md  LICENSE  README.md  advanced.html  api.html  contribution.html  examples.html  genindex.html  index.html  installation.html  objects.inv  others.html  py-modindex.html  requirements-travis.txt  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py
.github/workflows/: release.yml  tests.yml
_modules/: index.html
_modules/tfs/: connection.html  resources.html
_sources/: contribution.rst.txt  examples.rst.txt  index.rst.txt
docs/: ADVANCED.md  CONTRIBUTE.md  Makefile  OTHERS.md  advanced.rst  api.rst  conf.py  contribution.rst  examples.rst  index.rst  installation.rst  make.bat  others.rst  publish-gh-pages.sh
tests/: conftest.py  test_connection.py  test_resources.py  test_tfs.py
tests/resources/MyProject/_apis/test/runs/: response.json
tests/resources/MyProject/_apis/test/runs/1/: response.json
tests/resources/MyProject/_apis/wit/workitems/$Task/: response.json
tests/resources/_apis/tfvc/changesets/: response.json
tests/resources/_apis/tfvc/changesets/10/: response.json
tests/resources/_apis/wit/queries/MyQueries/AssignedToMe/: response.json
tests/resources/_apis/wit/wiql/: response.json
tests/resources/_apis/wit/workitems/100/: response.json
tests/resources/_apis/wit/workitems/100/revisions/: response.json
tests/resources/tfs/Development/_apis/projects/: response.json
tfs/: __init__.py  connection.py  resources.py  tfs.py
(+21 files in other folders)
