[metadata]
description-file = README.md
summary = Python library for interacting with Microsoft TFS via REST APIs.
keywords =
    Microsoft
    TFS
    library
    api
    client
    utility
    routines
    workitem
    changesets
    TFS2015

[aliases]
test=pytest

[flake8]
max-line-length = 120
;ignore = F405